<resources>
    <string name="app_name">GadgeothekApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="title_activity_deleteme">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="student_id">Student ID</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_tab">Gadgetothek Main</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_reservation">Add reservation</string>
    <string name="overdue">Days until returning: Overdue</string>
    <string name="ReservationOk">Gadget successfully reserved</string>
    <string name="ReservationNok">Gadget reservation not possible</string>
    <string name="WrongUserPw">Wrong user or password</string>
    <string name="youarefucked">Could not logout. Well, you\'re fucked</string>
    <string name="RegisterOk">Register completed</string>
    <string name="RegisterNok">Register not successful</string>
    <string name="ReadyToPickup">Status: Ready to pick up</string>
    <string name="ReservationDeleted">Reservation deleted</string>
    <string name="ReservationDeletedFailed">"Delete reservation failed: "</string>
    <string name="ServerChangeFailed">Server change failed</string>
    <string name="NoItemsFound">No Items found</string>
    <string name="presences">Presences</string>
    <string name="deleteReservationLayout">DeleteReservation</string>
    <string name="precensesNew">Precenses</string>


    <string-array name="server_list">
        <item>mge1.dev.ifs.hsr.ch</item>
        <item>mge2.dev.ifs.hsr.ch</item>
        <item>mge3.dev.ifs.hsr.ch</item>
        <item>mge4.dev.ifs.hsr.ch</item>
        <item>mge5.dev.ifs.hsr.ch</item>
        <item>mge6.dev.ifs.hsr.ch</item>
        <item>mge7.dev.ifs.hsr.ch</item>
        <item>mge8.dev.ifs.hsr.ch</item>
        <item>mge9.dev.ifs.hsr.ch</item>
        <item>mge10.dev.ifs.hsr.ch</item>
    </string-array>
</resources>
